split editor and engine to different cmake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,17 @@
 cmake_minimum_required(VERSION 3.16)
+set(CMAKE_CONFIGURATION_TYPES "Debug;Development;Shipping" CACHE STRING "" FORCE) 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 # test comment
 
-project(hexcell)
+project(hexcell VERSION 1.0)
 
 include_directories("include/")
-
 add_library(hexcell SHARED source/hexcell.cpp)
 
-add_executable(editor source/editor/editor.cpp)
-target_link_libraries(editor hexcell)
+add_subdirectory(editor)
