--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -3,5 +3,5 @@ set(CMAKE_CONFIGURATION_TYPES "Debug;Development;Shipping" CACHE STRING "" FORCE
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-add_executable(editor editor.cpp)
+add_executable(editor WIN32 editor.cpp)
 target_link_libraries(editor hexcell)
